--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -45,8 +45,8 @@ jobs:
         lfs: true
 
     # Install eva-docs
-    - name: Upgrade pip
-      run: $CONDA/bin/pip3 install --upgrade pip
+    #- name: Upgrade pip
+    #  run: $CONDA/bin/pip3 install --upgrade pip
     - name: Install Python dependencies for eva-docs
       uses: py-actions/py-dependency-install@v4
       with:
