--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -34,7 +34,8 @@ jobs:
     # Clone the eva-docs repository
     - name: Clone eva-docs repo
       uses: actions/checkout@v2
-      with:        
+      with:
+        path: './eva-docs'
         lfs: true
 
     # Clone the eva repository
@@ -66,16 +67,16 @@ jobs:
 
     # Generate rst files for jupyter notebooks
     - name: generate rst
-      run: nbsite generate-rst --org JCSDA-internal --project-name eva-docs --examples notebooks
+      run: nbsite generate-rst --org JCSDA-internal --project-name eva-docs --examples ./eva-docs/notebooks
 
     # Generate sphinx-api docs
     - name: Generate sphinx-api docs
-      run: sphinx-apidoc -o doc/API/ ./eva/src
+      run: sphinx-apidoc -o ./eva-docs/doc/API/ ./eva/src
 
     # Fix API index.md to include sphinx-api docs
     - name: Fix API index.md
-      run: python doc/api_setup.py
+      run: python ./eva-docs/doc/api_setup.py
 
     # Build html files for documentation
     - name: build docs
-      run: nbsite build --what=html --output=builtdocs --org JCSDA-internal --project-name eva-docs
+      run: nbsite build --what=html --output=builtdocs --org JCSDA-internal --project-name eva-docs --project-root ./eva-docs
