--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -61,8 +61,8 @@ jobs:
     - name: Install eva and dependencies
       run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
     - name: Put eva in the path
-      #run: echo "$HOME/.local/bin" >> $GITHUB_PATH
-      run: echo $GITHUB_PATH
+      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+      #run: echo $GITHUB_PATH
 
     # Install ipykernel
     - name: Install ipykernel
