--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -50,6 +50,11 @@ jobs:
     # Install eva-docs
     #- name: Upgrade pip
     #  run: $CONDA/bin/pip3 install --upgrade pip
+    - name: Create and run conda enviornment
+      run: |
+       conda create --name eva
+       conda activate eva
+    
     - name: Install Python dependencies for eva-docs
       uses: py-actions/py-dependency-install@v4
       with:
@@ -60,8 +65,8 @@ jobs:
     - name: Install eva and dependencies
       #run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
       run: $CONDA/bin/pip3 install ./eva/
-    - name: Put eva in the path
-      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+    #- name: Put eva in the path
+      #run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       #run: echo $GITHUB_PATH
 
     # Install ipykernel
