--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -69,7 +69,10 @@ jobs:
     - name: Put eva in the path
       #run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       #run: echo $GITHUB_PATH
-      run: echo "::set-env name=PYTHONPATH::home/runner/work/eva/eva/eva/"
+      #run: echo "::set-env name=PYTHONPATH::home/runner/work/eva/eva/eva/"
+      run: |
+       touch .env
+       echo PYTHONPATH=home/runner/work/eva/eva/eva/ >> .env
 
     # Install ipykernel
     - name: Install ipykernel
