--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -22,7 +22,7 @@ jobs:
     # Create and activate conda environment
     - name: Create and activate conda enviornment
       run: |
-       conda: error: argument COMMAND: invalid choice: 'activate'
+       conda update -n base -c defaults conda
        conda create -y --name eva
        conda activate eva || true
 
