--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -20,11 +20,11 @@ jobs:
       run: conda update -n base -c defaults conda
 
     # Create and activate conda environment
-    - name: Create and activate conda enviornment
-      run: |
-       conda update -n base -c defaults conda
-       conda create -y --name eva
-       conda activate eva || true
+    #- name: Create and activate conda enviornment
+    #  run: |
+    #   conda update -n base -c defaults conda
+    #   conda create -y --name eva
+    #   conda activate eva || true
 
     # Install pip
     - name: Install pip
@@ -43,7 +43,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: JCSDA-internal/eva-docs
-        path: './eva-docs'
+        #path: './eva-docs'
         lfs: true
 
     # Clone the eva repository
@@ -66,15 +66,16 @@ jobs:
     - name: Install Python dependencies for eva-docs
       uses: py-actions/py-dependency-install@v4
       with:
-        path: "./eva-docs/requirements-github.txt"
+        #path: "./eva-docs/requirements-github.txt"
+        path: "requirements-github.txt"
 
     # Clone eva repository
     # Install eva
     - name: Install eva and dependencies
-      #run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
-      run: $CONDA/bin/pip3 install ./eva/ --user
-    #- name: Put eva in the path
-      #run: echo "$HOME/.local/bin" >> $GITHUB_PATH
+      run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
+      #run: $CONDA/bin/pip3 install ./eva/ --user
+    - name: Put eva in the path
+      run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       #run: echo $GITHUB_PATH
       #run: echo "::set-env name=PYTHONPATH::home/runner/work/eva/eva/eva/"
       #run: |
