--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -96,7 +96,8 @@ jobs:
 
     # Fix API index.md to include sphinx-api docs
     - name: Fix API index.md
-      run: python eva-docs/doc/api_setup.py eva-docs/doc/API/
+      run: python  doc/api_setup.py doc/API/
+      #run: python eva-docs/doc/api_setup.py eva-docs/doc/API/
       #run: ls /home/runner/work/eva/eva/eva-docs/
 
     # Build html files for documentation
