--- a/.github/workflows/docs_dry_run.yaml
+++ b/.github/workflows/docs_dry_run.yaml
@@ -72,8 +72,8 @@ jobs:
     # Clone eva repository
     # Install eva
     - name: Install eva and dependencies
-      run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
-      #run: $CONDA/bin/pip3 install ./eva/ --user
+      #run: $CONDA/bin/pip3 install --use-deprecated=legacy-resolver -r ./eva/requirements-github.txt --user ./eva/
+      run: $CONDA/bin/pip3 install ./eva/ --user
     - name: Put eva in the path
       run: echo "$HOME/.local/bin" >> $GITHUB_PATH
       #run: echo $GITHUB_PATH
@@ -102,4 +102,5 @@ jobs:
 
     # Build html files for documentation
     - name: build docs
-      run: nbsite build --what=html --output=builtdocs --org JCSDA-internal --project-name eva-docs --project-root eva-docs/
+      #run: nbsite build --what=html --output=builtdocs --org JCSDA-internal --project-name eva-docs --project-root eva-docs/
+      run: nbsite build --what=html --output=builtdocs --org JCSDA-internal --project-name eva-docs
