--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,19 @@
+# Data files
+# ----------
 *.nc filter=lfs diff=lfs merge=lfs -text
 *.nc4 filter=lfs diff=lfs merge=lfs -text
 *.res filter=lfs diff=lfs merge=lfs -text
 *.odb filter=lfs diff=lfs merge=lfs -text
+
+# Jupyter notebooks
+# -----------------
 *.ipynb filter=lfs diff=lfs merge=lfs -text
+
+# Images
+# ------
+*.ppt* filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.gif filter=lfs diff=lfs merge=lfs -text
